Fix issue with flex child going offscreen

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -59,6 +59,8 @@ img {
 
 .container {
     max-width: 900px;
+    margin: auto;
+    padding: 50px 0;
 }
 
 .button {
